bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value getIndication
  var message:String = getIndication(readMessage());
                       ^